# loggix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.yaml  docker-compose.yml
benches/: logging.rs  logging_benchmark.rs
examples/: basic_logging.rs  config.yml  custom_formatter.rs  demo.rs  error_handling.rs  json_logging.rs  kafka_example.rs  output_example.rs  structured_logging.rs
scripts/: run_integration_tests.ps1  run_integration_tests.sh
src/: lib.rs
tests/: custom_formatter_test.rs  kafka_integration_test.rs
