[package]
name = "loggix"
version = "0.1.0"
edition = "2021"
description = "A powerful, structured logging library for Rust inspired by Logrus"
authors = ["Christos Ploutarchou <cploutarchou@gmail.com>"]
license = "MIT"
repository = "https://github.com/cploutarchou/loggix"
keywords = ["logging", "structured", "log", "json", "logrus"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
